<resources >
    <string name="app_name">Coop Project</string>
    <string name="home_navigation">Home</string>
    <string name="Insights_navigation">Insights</string>
    <string name="Profile_navigation">Profile</string>
    <string name="hour_option_1">\ hr\</string>
    <string name="hour_option_2"> \ hr \ </string>
    <string name="minute_option">\ m\</string>
    <string name="start_exercising">Start Exercising</string>

    <string name="day1">Sunday</string>
    <string name="day2">Monday</string>
    <string name="day3">Tuesday</string>
    <string name="day4">Wednesday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="day7">Thursday</string>

    <string name="ex1">Chest Day</string>
    <string name="ex2">Leg day</string>
    <string name="ex3">Shoulder Day</string>
    <string name="ex4">Heavy lifting</string>
    <string name="ex5">Easy</string>
    <string name="greeting2">This is your progress</string>
    <string name="greeting1">Hello</string>
    <string name="points_text">Points</string>
    <string name="daysWorkedOut">Finished Workouts</string>
    <string name="daysNotWorkedout">Unfinished Workouts</string>
    <string name="bodyTypeButtonText">Check your body type</string>

    <string name="reps">Reps</string>
    <string name="sets">Sets</string>
    <string name="finishWorkoutButtonText">Finish Workout</string>
    <string name = "DoneButtonText">Done</string>

    <string name="sb1">Bench Press</string>
    <string name = "sb2"> Push Up</string>
    <string name="sb3">Inclined Chest Press</string>
    <string name="sb4">Declined chest press</string>
    <string name="sb5">Dips</string>
    <string name = "sb6">Dumbbell Chest Press</string>
    <string name="sb7">Shoulder Bench Press</string>
    <string name="exerciseAlertTitle">Are you sure you want to quit?</string>
    <string name="exerciseAlertBody">Quitting without finishing workout will lower your score.</string>
    <string name="Button2">Confirm</string>
    <string name="Button1">Cancel</string>
    <string name="userNameHeading">User name</string>
    <string name="hoursActiveHeading">Hours Active</string>
    <string name="ageHeading">Age</string>
    <string name="profileAlertTitle">Are you sure you want to update your profile?</string>
    <string name="profileAlertBody">Updating your profile may change your workout routine. Are you sure?</string>
    <string name="ProfileScreenHeader">Profile</string>
    <string name="warningText1Profile">Updating your profile may change</string>
    <string name="warningText2Profile">your workout routine</string>
    <string name="BodyTypeHeader">Body Type</string>
    <string name="weightHeading">Weight</string>
    <string name="heightHeader">Height</string>
    <string name="canada">Canada</string>
    <string name="usa">USA</string>
    <string name="Myanmar">Myanmar</string>
    <string name="liberia">Liberia</string>
    <string name="pounds">Pounds</string>
    <string name="kilograms">Kilograms</string>
    <string name="Foot">Feet</string>
    <string name="meters">Meters</string>
    <string name="underWeightMsg">You are currently underweight.</string>
    <string name="healthyMsg">You are currently healthy!</string>
    <string name="overWeightMsg">You are currently overweight!</string>
    <string name="contDescStartExerciseButton">Start Exercise Button. Double Tap to activate.</string>
    <string name="cdForDashboardNav">Dashboard Navigation Button. Double tap to navigate to Dashboard Screen.</string>
    <string name="cdinsightsScreenNav">Insights Navigation Button. Double tap to navigate to insights screen.</string>
    <string name="cdProfileScreenNav">Profile Navigation. Double tap to navigate to profile screen.</string>
    <string name="timerIcon">Icon showing a timer icon.</string>
    <string name="checkBodyType">Check Body Type Button. Double Tap to navigate to check body type screen.</string>
    <string name="tgFinished">finished</string>
    <string name="tgUnfinished">unfinished</string>
    <string name="cdBackButtonInsigtsScreen">Back Button.</string>
    <string name="cdForSubmit">Check body type. Double tap to activate.</string>
    <string name="cdDoneButton">Done Button. Double tap to make changes.</string>
    <string name="cdtextFieldForUserName">Text Field For user name. Double Tap to write.</string>


    <!-- Test Tags-->
    <string name="testDagDayName">dayName</string>
    <string name="TestTagExerciseInfo">ExerciseType</string>
    <string name="TestTagStartExerciseButton">Start Exercise Button</string>
    <string name="TestTagHomeNav">HomeNavigation</string>
    <string name="TestTagInsightsNav">InsightsNav</string>
    <string name="TestTagNav">ProfileNav</string>
    <string name="TestTagWelcomeText">welcomeText</string>
    <string name="TestTagPointsWheel">PointsWheel</string>
    <string name="TestTagWorkoutInfo">workoutInfo</string>
    <string name="TestTagBodyType">BodyTypeTestTag</string>
    <string name="TestTagBackButton">Back Button</string>
    <string name="TestTagUserNameTextField">userName</string>
    <string name="TestTagAge">testAge</string>
    <string name="TestTagRadioButton">RadioTestTag</string>
    <string name="TestTagProfileScreenBottomBar">TestTagProfileScreenBottomBar</string>
    <string name="TestTagDoneButton">TestTagDoneButton</string>
    <string name="TestTagButton1">Button1</string>
    <string name="TestTagButton2">TestTagButton2</string>
    <string name="TestTagUnit">UnitTestTag</string>
    <string name="TestTagPlusButton">TestTagPlusButton</string>
    <string name="TestTagSubtractButton">TestTagSubtractButton</string>
    <string name="TestTagForParameterValue">TestTagForParameterValue</string>
    <string name="TestTagCheckBodyType">TestTagCheckBodyType</string>
    <string name="TestTagRetryButton">TestTagRetryButton</string>
    <string name="TestTagDoneButtonExercise">TestTagDoneButton</string>
    <string name="TestTagFinishExerciseButton">TestTagFinishExerciseButton</string>
    
    <string name="clientID">116444876397-do0tbrpj5j042lafrriutn22ntdhf0lr.apps.googleusercontent.com</string>
    <string name="clientSecret">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</string>

    <string name="facebook_app_id">542065874437644</string>
    <string name="fb_login_protocol_scheme">fb542065874437644</string>
    <string name="facebook_client_token">13d0431ec75a2045baa8da8dde218f5a</string>


</resources>