...
    }
    val showMessage = remember {
        mutableStateOf(false)
    }

    val testTagCheckBodyTypeButton  = stringResource(R.string.TestTagCheckBodyType)
    val testTagRetryButton = stringResource(R.string.TestTagRetryButton)
    if (showButton.value){
        val contentDescriptionForCheckBodyTypeButton = stringResource(R.string.cdForSubmit)
        Button(
            modifier = Modifier
                .fillMaxWidth().height(55.dp)
                .clearAndSetSemantics {
...
